Fixed Header with padding bottom.
background radius was overflowing the header box, padding fixed.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -36,6 +36,7 @@ header {
     align-content: center;
     justify-content: space-evenly;
     flex-direction: column;
+    padding-bottom: 12px;
     
 }
 
